# bazel-demo-golang

./: BUILD.bazel  Gopkg.toml  WORKSPACE
bindata/: BUILD.bazel  bindata_test.go
cmd/child/: BUILD.bazel  main.go
cmd/parent/: BUILD.bazel  main.go
