load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//extras:bindata.bzl", "bindata")

bindata(
    name = "data",
    package = "bindata",
    srcs = glob(
        ["*"],
        exclude = [
            "bindata.go",
            "BUILD.bazel",
        ],
    ),
)

go_library(
    name = "go_default_library",
    srcs = [":data"],
    importpath = "github.com/simonswine/bazel-demo-golang"
)

go_test(
    name = "go_default_test",
    srcs = ["bindata_test.go"],
    embed  = [":go_default_library"]
)
