load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/simonswine/bazel-demo-golang/cmd/child",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "child",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
